[package]
name = "docker-log-stream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoll = "4.3.1"
serde = "1"
nix = "0.22.0"
tempfile = "3.2.0"
serde_json = "1"
hyperlocal = "0.8"
hyper = "0.14"
tokio = {version = "1", features = ["full"]}
futures-lite = "1"
once_cell = "*"
hex = "0.4.3"

[dev-dependencies]
